--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.0",
+    "graphql-request": "^3.7.0",
+    "he": "^1.2.0",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
+    "plaiceholder": "^2.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   }
 }
